[gd_scene format=4 uid="uid://d1rhjk4m8n8"]

[ext_resource type="Script" uid="uid://crhehoy8kx0m1" path="res://class/p_environment/tetromino.gd" id="1_33jdf"]
[ext_resource type="Texture2D" uid="uid://dl4f4sjywqxfc" path="res://art/grasstileset/grass_tile_set.png" id="2_33jdf"]
[ext_resource type="Texture2D" uid="uid://6rr83rwxdj2t" path="res://art/grasstileset/grass_tile_set_trans.png" id="3_yxp60"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yxp60"]
texture = ExtResource("2_33jdf")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0

[sub_resource type="TileSet" id="TileSet_tp16d"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_yxp60")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tp16d"]
texture = ExtResource("3_yxp60")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0

[sub_resource type="TileSet" id="TileSet_gjp4x"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_tp16d")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kcjrc"]
texture = ExtResource("3_yxp60")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0

[sub_resource type="TileSet" id="TileSet_el6p3"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_kcjrc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fdkjg"]
texture = ExtResource("3_yxp60")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0

[sub_resource type="TileSet" id="TileSet_mgky1"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_fdkjg")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g66b0"]
texture = ExtResource("3_yxp60")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0

[sub_resource type="TileSet" id="TileSet_gqdsn"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_g66b0")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v7pnu"]
texture = ExtResource("3_yxp60")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0

[sub_resource type="TileSet" id="TileSet_3w8fv"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_v7pnu")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_02gwk"]
texture = ExtResource("3_yxp60")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0

[sub_resource type="TileSet" id="TileSet_8omp0"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_02gwk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vt44v"]
texture = ExtResource("3_yxp60")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0

[sub_resource type="TileSet" id="TileSet_lrek3"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_vt44v")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hol4"]
size = Vector2(112, 112)

[node name="TetrominoGen" type="Node2D" unique_id=1993780603]
metadata/placed = false

[node name="tetromino" type="GridContainer" parent="." unique_id=1810432864]
offset_right = 260.0
offset_bottom = 524.0
pivot_offset = Vector2(128, 128)
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2
script = ExtResource("1_33jdf")

[node name="square" type="TileMapLayer" parent="tetromino" unique_id=1022652010]
visible = false
texture_filter = 1
tile_map_data = PackedByteArray("AAADAAEAAAAFAAIAAAADAAIAAAAFAAIAAAADAAUAAAAFAAIAAAADAAYAAAAFAAIAAAAEAAUAAAAGAAIAAAAEAAYAAAAGAAIAAAAEAAIAAAAGAAIAAAAEAAEAAAAGAAIAAAADAAMAAAAEAAAAAAABAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAABAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAEAAAABAAAAAAACAAEAAAABAAAAAAACAAUAAAABAAAAAAAGAAUAAAABAAAAAAAEAAMAAAAFAAAAAAAEAAQAAAAFAAEAAAAGAAYAAAABAAEAAAACAAYAAAABAAEAAAACAAIAAAABAAEAAAAGAAIAAAABAAEAAAADAAQAAAAEAAEAAAAFAAYAAAAAAAEAAAABAAYAAAAAAAEAAAABAAIAAAAAAAEAAAAFAAIAAAAAAAEAAAAFAAMAAAAEAAIAAAAGAAMAAAAEAAIAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAABAAQAAAAEAAMAAAACAAQAAAAEAAMAAAAFAAQAAAAEAAMAAAAGAAQAAAAEAAMAAAAHAAAAAAABAAIAAAAAAAAAAAAAAAIAAAAAAAcAAAAAAAMAAAAHAAcAAAABAAMAAAABAAcAAAACAAAAAAADAAcAAAACAAAAAAAFAAcAAAACAAAAAAACAAcAAAADAAAAAAAEAAcAAAADAAAAAAAGAAcAAAADAAAAAAABAAAAAAACAAEAAAADAAAAAAACAAEAAAAFAAAAAAACAAEAAAACAAAAAAADAAEAAAAEAAAAAAADAAEAAAAGAAAAAAADAAEAAAAAAAEAAAADAAIAAAAAAAMAAAADAAIAAAAAAAUAAAADAAIAAAAHAAEAAAACAAIAAAAHAAMAAAACAAIAAAAHAAUAAAACAAIAAAAAAAIAAAADAAMAAAAAAAQAAAADAAMAAAAAAAYAAAADAAMAAAAHAAIAAAACAAMAAAAHAAQAAAACAAMAAAAHAAYAAAACAAMAAAA=")
tile_set = SubResource("TileSet_tp16d")

[node name="square2" type="TileMapLayer" parent="tetromino/square" unique_id=1352323844]
z_index = -1
texture_filter = 1
tile_map_data = PackedByteArray("AAADAAEAAAAFAAIAAAADAAIAAAAFAAIAAAADAAUAAAAFAAIAAAADAAYAAAAFAAIAAAAEAAUAAAAGAAIAAAAEAAYAAAAGAAIAAAAEAAIAAAAGAAIAAAAEAAEAAAAGAAIAAAADAAMAAAAEAAAAAAABAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAABAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAEAAAABAAAAAAACAAEAAAABAAAAAAACAAUAAAABAAAAAAAGAAUAAAABAAAAAAAEAAMAAAAFAAAAAAAEAAQAAAAFAAEAAAAGAAYAAAABAAEAAAACAAYAAAABAAEAAAACAAIAAAABAAEAAAAGAAIAAAABAAEAAAADAAQAAAAEAAEAAAAFAAYAAAAAAAEAAAABAAYAAAAAAAEAAAABAAIAAAAAAAEAAAAFAAIAAAAAAAEAAAAFAAMAAAAEAAIAAAAGAAMAAAAEAAIAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAABAAQAAAAEAAMAAAACAAQAAAAEAAMAAAAFAAQAAAAEAAMAAAAGAAQAAAAEAAMAAAAHAAAAAAABAAIAAAAAAAAAAAAAAAIAAAAAAAcAAAAAAAMAAAAHAAcAAAABAAMAAAABAAcAAAACAAAAAAADAAcAAAACAAAAAAAFAAcAAAACAAAAAAACAAcAAAADAAAAAAAEAAcAAAADAAAAAAAGAAcAAAADAAAAAAABAAAAAAACAAEAAAADAAAAAAACAAEAAAAFAAAAAAACAAEAAAACAAAAAAADAAEAAAAEAAAAAAADAAEAAAAGAAAAAAADAAEAAAAAAAEAAAADAAIAAAAAAAMAAAADAAIAAAAAAAUAAAADAAIAAAAHAAEAAAACAAIAAAAHAAMAAAACAAIAAAAHAAUAAAACAAIAAAAAAAIAAAADAAMAAAAAAAQAAAADAAMAAAAAAAYAAAADAAMAAAAHAAIAAAACAAMAAAAHAAYAAAACAAMAAAAHAAQAAAACAAMAAAA=")
tile_set = SubResource("TileSet_gjp4x")

[node name="T" type="TileMapLayer" parent="tetromino" unique_id=47324758]
visible = false
texture_filter = 1
tile_map_data = PackedByteArray("AAADAAUAAAAFAAIAAAADAAYAAAAFAAIAAAAEAAUAAAAGAAIAAAAEAAYAAAAGAAIAAAABAAEAAAAAAAAAAAABAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAACAAEAAAABAAAAAAACAAUAAAABAAAAAAAGAAUAAAABAAAAAAAGAAYAAAABAAEAAAACAAYAAAABAAEAAAACAAIAAAABAAEAAAADAAQAAAAEAAEAAAAFAAYAAAAAAAEAAAABAAYAAAAAAAEAAAABAAIAAAAAAAEAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAABAAQAAAAEAAMAAAACAAQAAAAEAAMAAAAAAAAAAAAAAAIAAAABAAAAAAACAAEAAAAAAAEAAAADAAIAAAAAAAMAAAADAAIAAAAAAAUAAAADAAIAAAAHAAUAAAACAAIAAAAAAAIAAAADAAMAAAAAAAQAAAADAAMAAAAAAAYAAAADAAMAAAAHAAYAAAACAAMAAAACAAAAAAADAAEAAAAEAAcAAAADAAAAAAAFAAcAAAACAAAAAAAGAAcAAAADAAAAAAAHAAcAAAABAAMAAAAAAAcAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAMAAAAAAAgAAAADAAMAAAABAAsAAAACAAAAAAADAAsAAAABAAMAAAADAAAAAAABAAIAAAAHAAQAAAABAAIAAAADAAcAAAAEAAAAAAADAAgAAAACAAIAAAADAAkAAAACAAIAAAADAAoAAAACAAMAAAAGAAQAAAADAAEAAAAFAAQAAAADAAEAAAAAAAsAAAAAAAMAAAACAAsAAAADAAAAAAADAAEAAAACAAIAAAADAAIAAAACAAMAAAADAAMAAAACAAMAAAAEAAQAAAACAAEAAAABAAcAAAAEAAIAAAACAAcAAAAEAAIAAAABAAgAAAAEAAMAAAACAAgAAAAEAAMAAAABAAkAAAAAAAAAAAACAAkAAAABAAAAAAACAAoAAAABAAEAAAABAAoAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_tp16d")

[node name="T2" type="TileMapLayer" parent="tetromino/T" unique_id=2068960161]
z_index = -1
tile_map_data = PackedByteArray("AAADAAUAAAAFAAIAAAADAAYAAAAFAAIAAAAEAAUAAAAGAAIAAAAEAAYAAAAGAAIAAAABAAEAAAAAAAAAAAABAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAACAAEAAAABAAAAAAACAAUAAAABAAAAAAAGAAUAAAABAAAAAAAGAAYAAAABAAEAAAACAAYAAAABAAEAAAACAAIAAAABAAEAAAADAAQAAAAEAAEAAAAFAAYAAAAAAAEAAAABAAYAAAAAAAEAAAABAAIAAAAAAAEAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAABAAQAAAAEAAMAAAACAAQAAAAEAAMAAAAAAAAAAAAAAAIAAAABAAAAAAACAAEAAAAAAAEAAAADAAIAAAAAAAMAAAADAAIAAAAAAAUAAAADAAIAAAAHAAUAAAACAAIAAAAAAAIAAAADAAMAAAAAAAQAAAADAAMAAAAAAAYAAAADAAMAAAAHAAYAAAACAAMAAAACAAAAAAADAAEAAAAEAAcAAAADAAAAAAAFAAcAAAACAAAAAAAGAAcAAAADAAAAAAAHAAcAAAABAAMAAAAAAAcAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAMAAAAAAAgAAAADAAMAAAABAAsAAAACAAAAAAADAAsAAAABAAMAAAADAAAAAAABAAIAAAAHAAQAAAABAAIAAAADAAcAAAAEAAAAAAADAAgAAAACAAIAAAADAAkAAAACAAIAAAADAAoAAAACAAMAAAAGAAQAAAADAAEAAAAFAAQAAAADAAEAAAAAAAsAAAAAAAMAAAACAAsAAAADAAAAAAADAAEAAAACAAIAAAADAAIAAAACAAMAAAADAAMAAAACAAMAAAAEAAQAAAACAAEAAAABAAcAAAAEAAIAAAACAAcAAAAEAAIAAAABAAgAAAAEAAMAAAACAAgAAAAEAAMAAAABAAkAAAAAAAAAAAACAAkAAAABAAAAAAACAAoAAAABAAEAAAABAAoAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_el6p3")

[node name="L" type="TileMapLayer" parent="tetromino" unique_id=974086977]
visible = false
texture_filter = 1
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAACAAEAAAABAAAAAAACAAYAAAABAAEAAAACAAIAAAABAAEAAAABAAYAAAAAAAEAAAABAAIAAAAAAAEAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAABAAQAAAAEAAMAAAACAAQAAAAEAAMAAAAAAAAAAAAAAAIAAAABAAAAAAACAAEAAAAAAAEAAAADAAIAAAAAAAMAAAADAAIAAAAAAAUAAAADAAIAAAAAAAIAAAADAAMAAAAAAAQAAAADAAMAAAAAAAYAAAADAAMAAAACAAAAAAADAAEAAAAAAAcAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAMAAAAAAAgAAAADAAMAAAADAAAAAAABAAIAAAAAAAsAAAAAAAMAAAACAAsAAAADAAAAAAADAAEAAAACAAIAAAADAAIAAAACAAMAAAABAAcAAAAEAAIAAAACAAcAAAAEAAIAAAABAAgAAAAEAAMAAAACAAgAAAAEAAMAAAABAAkAAAAAAAAAAAACAAkAAAABAAAAAAACAAoAAAABAAEAAAABAAoAAAAAAAEAAAABAAUAAAAAAAAAAAACAAUAAAABAAAAAAABAAsAAAACAAAAAAADAAsAAAACAAAAAAAFAAsAAAACAAAAAAAGAAsAAAADAAAAAAAEAAsAAAADAAAAAAAGAAgAAAADAAEAAAAFAAgAAAADAAEAAAAEAAgAAAACAAEAAAADAAMAAAACAAIAAAADAAUAAAACAAIAAAADAAcAAAACAAIAAAADAAYAAAACAAMAAAADAAQAAAACAAMAAAADAAgAAAAEAAEAAAAHAAgAAAABAAIAAAAHAAsAAAABAAMAAAAHAAkAAAACAAIAAAAHAAoAAAACAAMAAAADAAkAAAAFAAIAAAADAAoAAAAFAAIAAAAEAAkAAAAGAAIAAAAEAAoAAAAGAAIAAAAFAAkAAAAAAAAAAAAGAAkAAAABAAAAAAAGAAoAAAABAAEAAAAFAAoAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_tp16d")

[node name="L2" type="TileMapLayer" parent="tetromino/L" unique_id=560810268]
z_index = -1
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAACAAEAAAABAAAAAAACAAYAAAABAAEAAAACAAIAAAABAAEAAAABAAYAAAAAAAEAAAABAAIAAAAAAAEAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAABAAQAAAAEAAMAAAACAAQAAAAEAAMAAAAAAAAAAAAAAAIAAAABAAAAAAACAAEAAAAAAAEAAAADAAIAAAAAAAMAAAADAAIAAAAAAAUAAAADAAIAAAAAAAIAAAADAAMAAAAAAAQAAAADAAMAAAAAAAYAAAADAAMAAAACAAAAAAADAAEAAAAAAAcAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAMAAAAAAAgAAAADAAMAAAADAAAAAAABAAIAAAAAAAsAAAAAAAMAAAACAAsAAAADAAAAAAADAAEAAAACAAIAAAADAAIAAAACAAMAAAABAAcAAAAEAAIAAAACAAcAAAAEAAIAAAABAAgAAAAEAAMAAAACAAgAAAAEAAMAAAABAAkAAAAAAAAAAAACAAkAAAABAAAAAAACAAoAAAABAAEAAAABAAoAAAAAAAEAAAABAAUAAAAAAAAAAAACAAUAAAABAAAAAAABAAsAAAACAAAAAAADAAsAAAACAAAAAAAFAAsAAAACAAAAAAAGAAsAAAADAAAAAAAEAAsAAAADAAAAAAAGAAgAAAADAAEAAAAFAAgAAAADAAEAAAAEAAgAAAACAAEAAAADAAMAAAACAAIAAAADAAUAAAACAAIAAAADAAcAAAACAAIAAAADAAYAAAACAAMAAAADAAQAAAACAAMAAAADAAgAAAAEAAEAAAAHAAgAAAABAAIAAAAHAAsAAAABAAMAAAAHAAkAAAACAAIAAAAHAAoAAAACAAMAAAADAAkAAAAFAAIAAAADAAoAAAAFAAIAAAAEAAkAAAAGAAIAAAAEAAoAAAAGAAIAAAAFAAkAAAAAAAAAAAAGAAkAAAABAAAAAAAGAAoAAAABAAEAAAAFAAoAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_mgky1")

[node name="RevL" type="TileMapLayer" parent="tetromino" unique_id=37527647]
visible = false
texture_filter = 1
tile_map_data = PackedByteArray("AAAGAAUAAAABAAAAAAAGAAYAAAABAAEAAAAFAAYAAAAAAAEAAAAHAAUAAAACAAIAAAAHAAYAAAACAAMAAAAFAAUAAAAAAAAAAAAEAAgAAAAFAAEAAAADAAgAAAADAAEAAAACAAgAAAACAAEAAAABAAgAAAACAAEAAAAAAAgAAAAAAAIAAAAAAAsAAAAAAAMAAAABAAsAAAACAAAAAAACAAsAAAADAAAAAAADAAsAAAACAAAAAAAFAAsAAAACAAAAAAAEAAsAAAADAAAAAAAGAAsAAAADAAAAAAAHAAsAAAABAAMAAAAAAAkAAAADAAIAAAAAAAoAAAADAAMAAAABAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAABAAAAAAAGAAkAAAABAAAAAAACAAkAAAABAAAAAAABAAoAAAAAAAEAAAAFAAoAAAAAAAEAAAAFAAIAAAAAAAEAAAACAAoAAAABAAEAAAAGAAoAAAABAAEAAAAGAAIAAAABAAEAAAAHAAoAAAACAAMAAAAHAAgAAAACAAMAAAAHAAQAAAACAAMAAAAHAAIAAAACAAMAAAAHAAEAAAACAAIAAAAHAAMAAAACAAIAAAAHAAcAAAACAAIAAAAHAAkAAAACAAIAAAAEAAcAAAADAAMAAAAEAAYAAAADAAMAAAAEAAQAAAADAAMAAAAEAAIAAAADAAMAAAAEAAUAAAADAAIAAAAEAAMAAAADAAIAAAAEAAEAAAADAAIAAAAEAAAAAAAAAAIAAAAHAAAAAAABAAIAAAAFAAAAAAACAAEAAAAGAAAAAAADAAEAAAAFAAMAAAAEAAIAAAAFAAQAAAAEAAMAAAAFAAcAAAAEAAIAAAAFAAgAAAAEAAMAAAAGAAcAAAAEAAIAAAAGAAgAAAAEAAMAAAAGAAMAAAAEAAIAAAAGAAQAAAAEAAMAAAADAAkAAAAFAAIAAAAEAAkAAAAGAAIAAAADAAoAAAAFAAIAAAAEAAoAAAAGAAIAAAA=")
tile_set = SubResource("TileSet_tp16d")

[node name="RevL2" type="TileMapLayer" parent="tetromino/RevL" unique_id=2034247207]
z_index = -1
tile_map_data = PackedByteArray("AAAGAAUAAAABAAAAAAAGAAYAAAABAAEAAAAFAAYAAAAAAAEAAAAHAAUAAAACAAIAAAAHAAYAAAACAAMAAAAFAAUAAAAAAAAAAAAEAAgAAAAFAAEAAAADAAgAAAADAAEAAAACAAgAAAACAAEAAAABAAgAAAACAAEAAAAAAAgAAAAAAAIAAAAAAAsAAAAAAAMAAAABAAsAAAACAAAAAAACAAsAAAADAAAAAAADAAsAAAACAAAAAAAFAAsAAAACAAAAAAAEAAsAAAADAAAAAAAGAAsAAAADAAAAAAAHAAsAAAABAAMAAAAAAAkAAAADAAIAAAAAAAoAAAADAAMAAAABAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAABAAAAAAAGAAkAAAABAAAAAAACAAkAAAABAAAAAAABAAoAAAAAAAEAAAAFAAoAAAAAAAEAAAAFAAIAAAAAAAEAAAACAAoAAAABAAEAAAAGAAoAAAABAAEAAAAGAAIAAAABAAEAAAAHAAoAAAACAAMAAAAHAAgAAAACAAMAAAAHAAQAAAACAAMAAAAHAAIAAAACAAMAAAAHAAEAAAACAAIAAAAHAAMAAAACAAIAAAAHAAcAAAACAAIAAAAHAAkAAAACAAIAAAAEAAcAAAADAAMAAAAEAAYAAAADAAMAAAAEAAQAAAADAAMAAAAEAAIAAAADAAMAAAAEAAUAAAADAAIAAAAEAAMAAAADAAIAAAAEAAEAAAADAAIAAAAEAAAAAAAAAAIAAAAHAAAAAAABAAIAAAAFAAAAAAACAAEAAAAGAAAAAAADAAEAAAAFAAMAAAAEAAIAAAAFAAQAAAAEAAMAAAAFAAcAAAAEAAIAAAAFAAgAAAAEAAMAAAAGAAcAAAAEAAIAAAAGAAgAAAAEAAMAAAAGAAMAAAAEAAIAAAAGAAQAAAAEAAMAAAADAAkAAAAFAAIAAAAEAAkAAAAGAAIAAAADAAoAAAAFAAIAAAAEAAoAAAAGAAIAAAA=")
tile_set = SubResource("TileSet_gqdsn")

[node name="Squig" type="TileMapLayer" parent="tetromino" unique_id=2099980319]
visible = false
texture_filter = 1
tile_map_data = PackedByteArray("AAADAAYAAAAFAAIAAAAEAAYAAAAGAAIAAAABAAEAAAAAAAAAAAACAAEAAAABAAAAAAAGAAUAAAABAAAAAAAGAAYAAAABAAEAAAACAAYAAAABAAEAAAACAAIAAAABAAEAAAADAAQAAAAEAAEAAAAFAAYAAAAAAAEAAAABAAYAAAAAAAEAAAABAAIAAAAAAAEAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAABAAQAAAAEAAMAAAACAAQAAAAEAAMAAAAAAAAAAAAAAAIAAAABAAAAAAACAAEAAAAAAAEAAAADAAIAAAAAAAMAAAADAAIAAAAAAAUAAAADAAIAAAAHAAUAAAACAAIAAAAAAAIAAAADAAMAAAAAAAQAAAADAAMAAAAAAAYAAAADAAIAAAAHAAYAAAACAAMAAAACAAAAAAADAAEAAAADAAAAAAABAAIAAAAHAAQAAAABAAIAAAAGAAQAAAADAAEAAAAFAAQAAAADAAEAAAADAAEAAAACAAIAAAADAAIAAAACAAMAAAADAAMAAAACAAMAAAAEAAQAAAACAAEAAAABAAUAAAAAAAAAAAACAAUAAAABAAAAAAADAAUAAAAFAAIAAAAEAAUAAAAGAAIAAAAFAAUAAAAAAAAAAAAHAAcAAAACAAIAAAAHAAgAAAACAAMAAAAHAAkAAAACAAIAAAAHAAoAAAACAAMAAAAEAAkAAAADAAIAAAAEAAoAAAADAAIAAAAFAAsAAAACAAAAAAAGAAsAAAADAAAAAAAEAAsAAAAAAAMAAAAHAAsAAAABAAMAAAAAAAcAAAAAAAMAAAABAAcAAAACAAAAAAACAAcAAAADAAAAAAADAAcAAAACAAAAAAAEAAcAAAAFAAAAAAAEAAgAAAADAAMAAAAFAAcAAAAEAAIAAAAFAAgAAAAEAAMAAAAGAAcAAAAEAAIAAAAGAAgAAAAEAAMAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAEAAAAGAAkAAAABAAAAAAAGAAoAAAABAAEAAAA=")
tile_set = SubResource("TileSet_tp16d")

[node name="Squig2" type="TileMapLayer" parent="tetromino/Squig" unique_id=1231498093]
z_index = -1
tile_map_data = PackedByteArray("AAADAAYAAAAFAAIAAAAEAAYAAAAGAAIAAAABAAEAAAAAAAAAAAACAAEAAAABAAAAAAAGAAUAAAABAAAAAAAGAAYAAAABAAEAAAACAAYAAAABAAEAAAACAAIAAAABAAEAAAADAAQAAAAEAAEAAAAFAAYAAAAAAAEAAAABAAYAAAAAAAEAAAABAAIAAAAAAAEAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAABAAQAAAAEAAMAAAACAAQAAAAEAAMAAAAAAAAAAAAAAAIAAAABAAAAAAACAAEAAAAAAAEAAAADAAIAAAAAAAMAAAADAAIAAAAAAAUAAAADAAIAAAAHAAUAAAACAAIAAAAAAAIAAAADAAMAAAAAAAQAAAADAAMAAAAAAAYAAAADAAIAAAAHAAYAAAACAAMAAAACAAAAAAADAAEAAAADAAAAAAABAAIAAAAHAAQAAAABAAIAAAAGAAQAAAADAAEAAAAFAAQAAAADAAEAAAADAAEAAAACAAIAAAADAAIAAAACAAMAAAADAAMAAAACAAMAAAAEAAQAAAACAAEAAAABAAUAAAAAAAAAAAACAAUAAAABAAAAAAADAAUAAAAFAAIAAAAEAAUAAAAGAAIAAAAFAAUAAAAAAAAAAAAHAAcAAAACAAIAAAAHAAgAAAACAAMAAAAHAAkAAAACAAIAAAAHAAoAAAACAAMAAAAEAAkAAAADAAIAAAAEAAoAAAADAAIAAAAFAAsAAAACAAAAAAAGAAsAAAADAAAAAAAEAAsAAAAAAAMAAAAHAAsAAAABAAMAAAAAAAcAAAAAAAMAAAABAAcAAAACAAAAAAACAAcAAAADAAAAAAADAAcAAAACAAAAAAAEAAcAAAAFAAAAAAAEAAgAAAADAAMAAAAFAAcAAAAEAAIAAAAFAAgAAAAEAAMAAAAGAAcAAAAEAAIAAAAGAAgAAAAEAAMAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAEAAAAGAAkAAAABAAAAAAAGAAoAAAABAAEAAAA=")
tile_set = SubResource("TileSet_3w8fv")

[node name="RevSquig" type="TileMapLayer" parent="tetromino" unique_id=1728458417]
visible = false
texture_filter = 1
tile_map_data = PackedByteArray("AAADAAYAAAAFAAIAAAAEAAYAAAAGAAIAAAAGAAUAAAABAAAAAAAGAAYAAAABAAEAAAACAAYAAAABAAEAAAAFAAYAAAAAAAEAAAABAAYAAAAAAAEAAAAAAAUAAAADAAIAAAAHAAUAAAACAAIAAAAAAAYAAAADAAMAAAAHAAYAAAACAAMAAAAEAAcAAAADAAAAAAAFAAcAAAACAAAAAAAGAAcAAAADAAAAAAAHAAcAAAABAAMAAAAAAAcAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAMAAAAAAAgAAAADAAMAAAABAAsAAAACAAAAAAADAAsAAAABAAMAAAADAAcAAAAEAAAAAAADAAgAAAACAAIAAAADAAkAAAACAAIAAAADAAoAAAACAAMAAAAAAAsAAAAAAAMAAAACAAsAAAADAAAAAAABAAcAAAAEAAIAAAACAAcAAAAEAAIAAAABAAgAAAAEAAMAAAACAAgAAAAEAAMAAAABAAkAAAAAAAAAAAACAAkAAAABAAAAAAACAAoAAAABAAEAAAABAAoAAAAAAAEAAAABAAUAAAAAAAAAAAACAAUAAAABAAAAAAADAAUAAAAFAAIAAAAEAAUAAAAGAAIAAAAFAAUAAAAAAAAAAAAAAAQAAAAAAAIAAAAEAAAAAAAAAAIAAAAHAAAAAAABAAIAAAAHAAMAAAACAAIAAAAHAAQAAAACAAMAAAAHAAEAAAACAAIAAAAHAAIAAAACAAMAAAAEAAEAAAADAAIAAAAEAAIAAAADAAIAAAAEAAMAAAADAAMAAAAEAAQAAAAFAAEAAAABAAQAAAACAAEAAAACAAQAAAACAAEAAAADAAQAAAADAAEAAAAFAAMAAAAEAAIAAAAFAAQAAAAEAAMAAAAGAAMAAAAEAAIAAAAGAAQAAAAEAAMAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAEAAAAGAAEAAAABAAAAAAAGAAIAAAABAAEAAAAFAAAAAAACAAEAAAAGAAAAAAADAAEAAAA=")
tile_set = SubResource("TileSet_tp16d")

[node name="RevSquig2" type="TileMapLayer" parent="tetromino/RevSquig" unique_id=1897468892]
z_index = -1
tile_map_data = PackedByteArray("AAADAAYAAAAFAAIAAAAEAAYAAAAGAAIAAAAGAAUAAAABAAAAAAAGAAYAAAABAAEAAAACAAYAAAABAAEAAAAFAAYAAAAAAAEAAAABAAYAAAAAAAEAAAAAAAUAAAADAAIAAAAHAAUAAAACAAIAAAAAAAYAAAADAAMAAAAHAAYAAAACAAMAAAAEAAcAAAADAAAAAAAFAAcAAAACAAAAAAAGAAcAAAADAAAAAAAHAAcAAAABAAMAAAAAAAcAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAMAAAAAAAgAAAADAAMAAAABAAsAAAACAAAAAAADAAsAAAABAAMAAAADAAcAAAAEAAAAAAADAAgAAAACAAIAAAADAAkAAAACAAIAAAADAAoAAAACAAMAAAAAAAsAAAAAAAMAAAACAAsAAAADAAAAAAABAAcAAAAEAAIAAAACAAcAAAAEAAIAAAABAAgAAAAEAAMAAAACAAgAAAAEAAMAAAABAAkAAAAAAAAAAAACAAkAAAABAAAAAAACAAoAAAABAAEAAAABAAoAAAAAAAEAAAABAAUAAAAAAAAAAAACAAUAAAABAAAAAAADAAUAAAAFAAIAAAAEAAUAAAAGAAIAAAAFAAUAAAAAAAAAAAAAAAQAAAAAAAIAAAAEAAAAAAAAAAIAAAAHAAAAAAABAAIAAAAHAAMAAAACAAIAAAAHAAQAAAACAAMAAAAHAAEAAAACAAIAAAAHAAIAAAACAAMAAAAEAAEAAAADAAIAAAAEAAIAAAADAAIAAAAEAAMAAAADAAMAAAAEAAQAAAAFAAEAAAABAAQAAAACAAEAAAACAAQAAAACAAEAAAADAAQAAAADAAEAAAAFAAMAAAAEAAIAAAAFAAQAAAAEAAMAAAAGAAMAAAAEAAIAAAAGAAQAAAAEAAMAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAEAAAAGAAEAAAABAAAAAAAGAAIAAAABAAEAAAAFAAAAAAACAAEAAAAGAAAAAAADAAEAAAA=")
tile_set = SubResource("TileSet_8omp0")

[node name="Line" type="TileMapLayer" parent="tetromino" unique_id=632422577]
visible = false
texture_filter = 1
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAACAAEAAAABAAAAAAACAAYAAAABAAEAAAACAAIAAAABAAEAAAABAAYAAAAAAAEAAAABAAIAAAAAAAEAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAABAAQAAAAEAAMAAAACAAQAAAAEAAMAAAAAAAAAAAAAAAIAAAABAAAAAAACAAEAAAAAAAEAAAADAAIAAAAAAAMAAAADAAIAAAAAAAUAAAADAAIAAAAAAAIAAAADAAMAAAAAAAQAAAADAAMAAAAAAAYAAAADAAMAAAACAAAAAAADAAEAAAAAAAcAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAMAAAAAAAgAAAADAAMAAAADAAAAAAABAAIAAAABAAcAAAAEAAIAAAACAAcAAAAEAAIAAAABAAgAAAAEAAMAAAACAAgAAAAEAAMAAAABAAkAAAAAAAAAAAACAAkAAAABAAAAAAACAAoAAAABAAEAAAABAAoAAAAAAAEAAAABAAUAAAAAAAAAAAACAAUAAAABAAAAAAADAAEAAAACAAIAAAADAAIAAAACAAMAAAADAAMAAAACAAIAAAADAAQAAAACAAMAAAADAAUAAAACAAIAAAADAAYAAAACAAMAAAADAAcAAAACAAIAAAADAAgAAAACAAMAAAADAAkAAAACAAIAAAADAAoAAAACAAMAAAADAAsAAAACAAIAAAADAAwAAAACAAMAAAADAA0AAAACAAIAAAADAA4AAAACAAMAAAAAAAsAAAADAAIAAAAAAAwAAAADAAMAAAAAAA0AAAADAAIAAAAAAA4AAAADAAMAAAABAA8AAAACAAAAAAACAA8AAAADAAAAAAADAA8AAAABAAMAAAAAAA8AAAAAAAMAAAABAAsAAAAEAAIAAAABAAwAAAAEAAMAAAACAAsAAAAEAAIAAAACAAwAAAAEAAMAAAABAA0AAAAAAAAAAAABAA4AAAAAAAEAAAACAA0AAAABAAAAAAACAA4AAAABAAEAAAA=")
tile_set = SubResource("TileSet_tp16d")

[node name="Line2" type="TileMapLayer" parent="tetromino/Line" unique_id=1130352395]
z_index = -1
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAACAAEAAAABAAAAAAACAAYAAAABAAEAAAACAAIAAAABAAEAAAABAAYAAAAAAAEAAAABAAIAAAAAAAEAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAABAAQAAAAEAAMAAAACAAQAAAAEAAMAAAAAAAAAAAAAAAIAAAABAAAAAAACAAEAAAAAAAEAAAADAAIAAAAAAAMAAAADAAIAAAAAAAUAAAADAAIAAAAAAAIAAAADAAMAAAAAAAQAAAADAAMAAAAAAAYAAAADAAMAAAACAAAAAAADAAEAAAAAAAcAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAMAAAAAAAgAAAADAAMAAAADAAAAAAABAAIAAAABAAcAAAAEAAIAAAACAAcAAAAEAAIAAAABAAgAAAAEAAMAAAACAAgAAAAEAAMAAAABAAkAAAAAAAAAAAACAAkAAAABAAAAAAACAAoAAAABAAEAAAABAAoAAAAAAAEAAAABAAUAAAAAAAAAAAACAAUAAAABAAAAAAADAAEAAAACAAIAAAADAAIAAAACAAMAAAADAAMAAAACAAIAAAADAAQAAAACAAMAAAADAAUAAAACAAIAAAADAAYAAAACAAMAAAADAAcAAAACAAIAAAADAAgAAAACAAMAAAADAAkAAAACAAIAAAADAAoAAAACAAMAAAADAAsAAAACAAIAAAADAAwAAAACAAMAAAADAA0AAAACAAIAAAADAA4AAAACAAMAAAAAAAsAAAADAAIAAAAAAAwAAAADAAMAAAAAAA0AAAADAAIAAAAAAA4AAAADAAMAAAABAA8AAAACAAAAAAACAA8AAAADAAAAAAADAA8AAAABAAMAAAAAAA8AAAAAAAMAAAABAAsAAAAEAAIAAAABAAwAAAAEAAMAAAACAAsAAAAEAAIAAAACAAwAAAAEAAMAAAABAA0AAAAAAAAAAAABAA4AAAAAAAEAAAACAA0AAAABAAAAAAACAA4AAAABAAEAAAA=")
tile_set = SubResource("TileSet_lrek3")

[node name="1" type="Panel" parent="tetromino" unique_id=1736430427]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="sprite1" type="Sprite2D" parent="tetromino/1" unique_id=1905718013]
position = Vector2(64, 64)

[node name="flower1" type="Sprite2D" parent="tetromino/1/sprite1" unique_id=2083464298]

[node name="Area1" type="Area2D" parent="tetromino/1" unique_id=705086210]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tetromino/1/Area1" unique_id=2018254612]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_0hol4")

[node name="2" type="Panel" parent="tetromino" unique_id=587802367]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="sprite2" type="Sprite2D" parent="tetromino/2" unique_id=953887763]
position = Vector2(64, 64)

[node name="flower2" type="Sprite2D" parent="tetromino/2/sprite2" unique_id=2043433375]

[node name="Area2" type="Area2D" parent="tetromino/2" unique_id=57904424]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tetromino/2/Area2" unique_id=133978258]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_0hol4")

[node name="3" type="Panel" parent="tetromino" unique_id=1427348654]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="sprite3" type="Sprite2D" parent="tetromino/3" unique_id=773950616]
position = Vector2(64, 64)

[node name="flower3" type="Sprite2D" parent="tetromino/3/sprite3" unique_id=1909909011]

[node name="Area3" type="Area2D" parent="tetromino/3" unique_id=1379035327]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tetromino/3/Area3" unique_id=1522266667]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_0hol4")

[node name="4" type="Panel" parent="tetromino" unique_id=319580461]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="sprite4" type="Sprite2D" parent="tetromino/4" unique_id=1564914107]
position = Vector2(64, 64)

[node name="flower4" type="Sprite2D" parent="tetromino/4/sprite4" unique_id=463996009]

[node name="Area4" type="Area2D" parent="tetromino/4" unique_id=2118683167]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tetromino/4/Area4" unique_id=1815192151]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_0hol4")

[node name="5" type="Panel" parent="tetromino" unique_id=1412128322]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="sprite5" type="Sprite2D" parent="tetromino/5" unique_id=1466965650]
position = Vector2(64, 64)

[node name="flower5" type="Sprite2D" parent="tetromino/5/sprite5" unique_id=113174162]

[node name="Area5" type="Area2D" parent="tetromino/5" unique_id=1216002690]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tetromino/5/Area5" unique_id=246978519]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_0hol4")

[node name="6" type="Panel" parent="tetromino" unique_id=764318371]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(37.875, 47.42)
layout_mode = 2

[node name="sprite6" type="Sprite2D" parent="tetromino/6" unique_id=1162396088]
position = Vector2(64, 64)

[node name="flower6" type="Sprite2D" parent="tetromino/6/sprite6" unique_id=1550358160]

[node name="Area6" type="Area2D" parent="tetromino/6" unique_id=1568361676]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tetromino/6/Area6" unique_id=214613489]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_0hol4")

[node name="7" type="Panel" parent="tetromino" unique_id=327635289]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(37.875, 47.42)
layout_mode = 2

[node name="sprite7" type="Sprite2D" parent="tetromino/7" unique_id=1186823370]
position = Vector2(64, 64)

[node name="flower7" type="Sprite2D" parent="tetromino/7/sprite7" unique_id=1402891677]

[node name="Area7" type="Area2D" parent="tetromino/7" unique_id=573728068]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tetromino/7/Area7" unique_id=820288627]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_0hol4")
